--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 How to prepare a release:
 
-Update the version and changelog in the spec file
+Update the version and changelog in the spec file:
+
+- change project_version and changelog in the spec
+- run
+      mvn versions:set -DnewVersion=<new version>
 
 run:
   git archive --format=tgz >ovirt-optimizer-{version}.tar.gz
