Split bundled dependencies to separate subpackage
Change-Id: I14d6983786f2c0f3868a86650c75dfb42c00d94d
Signed-off-by: Martin Sivak <msivak@redhat.com>

--- a/README
+++ b/README
@@ -7,4 +7,4 @@ Update the version and changelog in the spec file:
       mvn versions:set -DnewVersion=<new version>
 
 run:
-  git archive --format=tgz >ovirt-optimizer-{version}.tar.gz
+  git archive --format=tgz HEAD >ovirt-optimizer-{version}.tar.gz
