Set version to 0.8-SNAPSHOT
This also adds support for SNAPSHOT versioning to the spec file
and describes the steps to use it.

Change-Id: I92729d20b8e6d00cb2acde9a4f9a67e9f83a64bd
Signed-off-by: Martin Sivak <msivak@redhat.com>

--- a/README
+++ b/README
@@ -41,3 +41,22 @@ How to prepare a release:
 
 2. run:
    git archive --format=tgz HEAD >ovirt-optimizer-{version}.tar.gz
+
+BUILDING RPM
+
+This shell script can be used to prepare a properly versioned RPM
+
+sed -i -e 's/mvn --offline /mvn /g' ovirt-optimizer.spec
+
+# downloads and installs the necessary jars
+mvn help:evaluate -Dexpression=project.version 
+
+# Prepare the version string (with support for SNAPSHOT versioning)
+# $VERSION contains the version and ${VERSION[1]} the release if it is needed
+VERSION=$(mvn help:evaluate -Dexpression=project.version 2>/dev/null | grep -v "^\[")
+VERSION=${VERSION/-SNAPSHOT/-0.$(git rev-list HEAD --count).$(date +%04Y%02m%02d%02H%02M)}
+IFS='-' read -ra VERSION <<< "$VERSION"
+
+git archive --format=tar HEAD | gzip -9 >$HOME/rpmbuild/SOURCES/ovirt-optimizer-$VERSION.tar.gz
+rpmbuild --define "_version $VERSION" --define "_release ${VERSION[1]-1}" -ba --nodeps ovirt-optimizer.spec
+
