--- a/README
+++ b/README
@@ -90,6 +90,7 @@ RUN (USING SOURCE  DISTRIBUTION)
 org.ovirt.optimizer.sdk.protocol=http
 org.ovirt.optimizer.sdk.server=dockerhost
 org.ovirt.optimizer.sdk.port=8080
+org.ovirt.optimizer.sdk.connection.timeout=10
 org.ovirt.optimizer.sdk.username=admin@internal
 org.ovirt.optimizer.sdk.password=PASSWORD
 org.ovirt.optimizer.sdk.ca.store=/etc/ovirt-optimizer/ovirt-optimizer.truststore
