--- a/README
+++ b/README
@@ -16,6 +16,7 @@ RUN
 org.ovirt.optimizer.sdk.protocol=http
 org.ovirt.optimizer.sdk.server=dockerhost
 org.ovirt.optimizer.sdk.port=8080
+org.ovirt.optimizer.sdk.connection.timeout=10
 org.ovirt.optimizer.sdk.username=admin@internal
 org.ovirt.optimizer.sdk.password=PASSWORD
 org.ovirt.optimizer.sdk.ca.store=/etc/ovirt-optimizer/ovirt-optimizer.truststore
